Release Notes
=============

;;; -- Post 2.2final change list ----------------------------------------

Constraint rewriter
    o the .graph.query.Rewrite class recognises certain RDQL regex
      idioms and rewrites them. The rewritten expressions contained
      errors: (a) the case-insensitive classes stored the lowercased
      version fo the test string, which broken the RDB generated code;
      (b) against all his principles, kers had used toString() on
      the results of expression evaluation, which broke the comparison
      on typed or languaged literals. These Have Been Fixed.

PrefixMappings
    o new boolean method equalTo(PrefixMapping) compares mappings
      for equality but has opportunity to avoid creating intermediate
      maps.

    o NOTE: cannot overload .equals() because Model::equals() is already
      defined. Making Model implement PrefixMapping may have been a
      mistake ...

ARP
    o Total rewrite of internals. Now approx four times faster.
      User code will experience significantly less speed up,
      depending on the percentage of runtime taken up with
      parsing (as opposed to reading the data from the network
      or disk, and adding the triples to a Model).

    o oldarp package contains the final version of the previous
      design of ARP. This has some changes since the previous
      release (in Jena 2.2), most significantly corrected a bug
      in the implementation of the XML Base Rec.

    o The contract concerning behaviour after syntax errors has
      changed. (TBD: describe new contract).

    o Some changes in the error codes produced for ill-formed
      input.

    o A few public classes that were in the old ARP package, but
      labelled as not part of the API have been removed.

Node/Node_Literal/Literal

    o Node has gained the method getIndexingValue(), which is the
      value to use when indexing this Node for GraphMem lookup (and